# YuTian

./: CMakeLists.txt  main.cpp
JsPro/: lx-request.js  mock-tool.js  package-lock.json
QMLProject/: CMakeLists.txt  QMLProject.qmlproject  QMLProject.qmlproject.qtds  QMLProject.qmlproject.qtds.1f8d543  QMLProject.qrc  qmlmodules
QMLProject/content/: App.qml  MainWin.qml  MainWinForm.ui.qml  Screen01.ui.qml  Sidebar.qml  SidebarForm.ui.qml
QMLProject/imports/: CMakeLists.txt
QMLProject/imports/QMLProject/: CMakeLists.txt  Constants.qml  qmldir
QMLProject/imports/QMLProject/designer/: plugin.metainfo
QMLProject/src/: import_qml_plugins.h
Resources/: Resources.qrc  collect.qml
View/: MainWin.qml  SideBar.qml
ViewModel/: SideBar.cpp  app.cpp
include/ViewModel/: MainWin.h
src/: app.cpp
src/Model/: LXSingleBridge.cpp  Model.cpp  NodeProcessManager.cpp  SearchSong.cpp  SongManager.cpp  SongResource.cpp
src/Model/JsPro/song_info_source/: requestKG.ts
src/Model/SongManager/: MusicUrl.cpp  SongManager.cpp  SourceControl.cpp
src/Model/common/: GlobalObject.cpp
src/Model/search_source/: KuGouSearch.cpp  KuWoSearch.cpp  MiGuSearch.cpp  NetEaseSearch.cpp  QQSearch.cpp
src/Model/utils/: LXNetRequest.cpp
src/View/: MainWin.qml  SearchBox.qml
src/View/RightContent/: SearchPage.qml  Settings.qml
src/View/RightContent/SearchPage/: Loading.qml  SearchPage.qml  SongList.qml  SourceList.qml
src/View/RightContent/SearchPage/SongList/: InfoBox.qml  Pagination.qml  SongList.qml
src/View/common/: EventBus.qml  Theme.qml
src/ViewModel/: MainWin.cpp  SearchPage.cpp  SongResult.cpp  app.cpp
src/api_lx_source/: api_init.js  api_initSource.js  api_request.js  lx-request.js  lxTools.js  lxTools.ts  mock-tool.js  node_runner.js  package-lock.json  package.json  tsconfig.json
src/include/: temp.h
src/include/Model/: LXSingleBridge.h  Model.h  NodeProcessManager.h  SearchSong.h  SongManager.h  SongResource.h
src/include/Model/SongManager/: MusicUrl.h  SongManager.h  SourceControl.h
src/include/Model/common/: GlobalObject.h
src/include/Model/search_source/: ISearchSource.h  KuGouSearch.h  KuWoSearch.h  MiGuSearch.h  NetEaseSearch.h  QQSearch.h
src/include/Model/utils/: LXNetRequest.h
src/include/Model/utils/musicSdk/mg/: MusicSearch.h
src/include/ViewModel/: SearchPage.h  SideBar.h  SongResult.h  app.h
src/include/ViewModel/common/: EventBus.h
src/include/common/: YuTian.h
temp/: Model.h  ViewModel.h  temp.cpp
temp/temp1/: CMakeLists.txt  CounterModel.cpp  CounterModel.h  CounterView.qml  CounterViewModel.cpp  CounterViewModel.h  main.cpp
tests/: test.cpp
tests/Model/search_source/: test_KuGouSearch.cpp
